--- a/package.json
+++ b/package.json
@@ -89,10 +89,12 @@
     "@reduxjs/toolkit": "1.9.7",
     "axios": "1.5.1",
     "bootstrap": "5.3.2",
+    "chart.js": "^4.4.0",
     "dayjs": "1.11.10",
     "lodash": "4.17.21",
     "path-browserify": "1.0.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.47.0",
     "react-jhipster": "0.25.3",
